re-enabled scrolling when modals are active (need to re-factor hotel array generating code before re-enabling, so as to avoid issue of disappearing scrollbars changing the map bounds and generating a new search on windows browsers)

--- a/src/searchMap/css/searchMap.css
+++ b/src/searchMap/css/searchMap.css
@@ -7,7 +7,6 @@ button, html input[type="button"] {
 /* prevents scroll bound behaviour in chrome and firefox */
 body {
   overscroll-behavior-y: none;
-  scrollbar-gutter: stable both-edges;
 }
 
 body:after {
